--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar">
-       <!--android:theme="@style/AppTheme"  Убираем бар-->
+       android:theme="@style/Theme.AppCompat.NoActionBar">
+        <!-- android:theme="@android:style/Theme.NoTitleBar" -->
 
 
         <activity android:name=".authorization">
@@ -36,7 +36,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="API KEY" />
+            android:value="AIzaSyALuO7QvbW6ZLg3oEyyUcawJCBN0fuWlsU" />
 
 
     </application>
