--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,18 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-       android:theme="@style/Theme.AppCompat.NoActionBar">
-        <!-- android:theme="@android:style/Theme.NoTitleBar" -->
-
+        android:theme="@style/Theme.AppCompat.NoActionBar">
 
         <activity android:name=".authorization">
             <intent-filter>
@@ -28,17 +27,20 @@
         <activity
             android:name=".main_settings"
             android:label="@string/title_activity_main_settings"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyALuO7QvbW6ZLg3oEyyUcawJCBN0fuWlsU" />
 
+        <activity
+            android:name=".about"
+            android:label="Y_GPS Tracker">
 
+        </activity>
     </application>
 
 </manifest>
