--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.firebaseui:firebase-ui-database:1.2.0'
-    testCompile 'junit:junit:4.12'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
 
+    testCompile 'junit:junit:4.12'
 }
 
 
