--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,8 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +17,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-
         <activity android:name=".authorization">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,8 +26,7 @@
         </activity>
         <activity
             android:name=".main_settings"
-            android:label="@string/title_activity_main_settings"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_main_settings" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -42,9 +37,9 @@
 
         <activity
             android:name=".about"
-            android:label="Y_GPS Tracker">
-
-        </activity>
+            android:label="Y_GPS Tracker" />
+        <activity android:name=".email_developer" />
+        <activity android:name=".friend_search"></activity>
     </application>
 
 </manifest>
