--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.firebaseui:firebase-ui-database:1.2.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
+    compile 'com.evernote:android-job:1.1.10'
 
     testCompile 'junit:junit:4.12'
 }
